completed java script and styling

--- a/resources/index.html
+++ b/resources/index.html
@@ -19,6 +19,13 @@
         </button>
     </header>
 
+    <div class="container">
+        <!-- Uncompleted tasks -->
+        <ul class="todo" id="todo"></ul>
+
+        <!-- Completed tasks -->
+        <ul class="todo" id="completed"></ul>
+    </div>
 
     <!-- JavaScripts -->
 		<script src="Z:\Study\projectAPI\resources\js\main.js"></script>
